--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--This code is adapted from https://portswigger.net/web-security/csrf -->
 <html>
 <body>
 <form action="https://127.0.0.1:8080/transfer" method="POST">
